--- a/app/!Last/client/index.html
+++ b/app/!Last/client/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>Putinsize!</title>
-    <link href="reset.css" rel="stylesheet" type="text/css">
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <title>Amazeriffic!</title>
+    <link href="stylesheets/reset.css" rel="stylesheet" type="text/css">
+    <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>    
   </head>
@@ -11,28 +11,33 @@
   <body>
     <header>
       <div class="container">
-        <h1>A!</h1>
+        <h1>Amazeriffic!</h1>
         <nav>
-      
+          <a href="#">Sign Up!</a> |
+          <a href="#">FAQ</a> |
+          <a href="#">Support</a>
+        </nav>
+      </div>
+    </header>
 
 
     <main>
       <div class="container">
         <div class="tabs">
-          <a href=""><span class="active">Photos</span></a>
-          <a href=""><span>Comments</span></a>
-
+          <a href=""><span class="active">Newest</span></a>
+          <a href=""><span>Oldest</span></a>
+          <a href=""><span>Tags</span></a>
+          <a href=""><span>Add</span></a>
         </div>
         <div class="content">
-
-<!--<section class='comment-input'><input><button>+</button>
-      </section>
-      <section class='comments'>
-      </section>-->
-
-        </nav>
-      </div>
-    </header>
+          <ul>
+            <li>Get Groceries</li>
+            <li>Make up some new ToDos</li>
+            <li>Prep for Monday's class</li>
+            <li>Answer recruiter emails on LinkedIn</li>
+            <li>Take Gracie to the park</li>
+            <li>Finish writing book</li>
+          </ul>
         </div>
       </div>
     </main>
@@ -41,9 +46,9 @@
       <div class="container">
         <div class="contact">
           <h5>Contact Us</h5>
-          <p>Putinsize!</p>
-          <p>42 Awesome Street</p>
-          <p>Coolville, 9000</p>
+          <p>Amazeriffic!</p>
+          <p>555 Fiftieth Street</p>
+          <p>Asheville, NC 28801</p>
         </div>
         <div class="sitemap">
           <h5>Sitemap</h5>
@@ -64,14 +69,6 @@
     </footer>
 
     <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-    <script src="app.js"></script>
-
-    <script>
-
-    //console.log(globalVar);
-
-     
-    </script>
-
+    <script src="javascripts/app.js"></script>
   </body>
 </html>
